--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Writer & Thinker</title>
+    <title>Yagnik N. Patel - Writer & Thinker</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,300;0,400;0,600;1,400&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
@@ -527,7 +527,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-content">
-            <a href="#home" class="logo">YN</a>
+            <a href="#home" class="logo">Yagnik!</a>
             <div class="mobile-menu-toggle" onclick="toggleMobileMenu()">
                 <span></span>
                 <span></span>
@@ -546,7 +546,7 @@
     <section id="home" class="hero">
         <h1>Welcome. I'm a writer exploring ideas that matter.</h1>
         <p>I write about productivity, philosophy, and the frameworks that shape how we think and work.</p>
-        <p>Join 800,000+ others who read my weekly insights.</p>
+        <p>Let's join and together read my weekly insights.</p>
     </section>
 
     <!-- Main Content -->
@@ -556,7 +556,7 @@
             <h2>About Me</h2>
             <p>
                 I'm a writer, thinker, and creator dedicated to exploring the frameworks that help us live better lives. 
-                My work sits at the intersection of philosophy, productivity, and personal growth.
+                My work sits at the intersection of philosophy, productivity, and personal growth. Btw, ICT Engineering Student :(
             </p>
             <p>
                 In 1789, philosopher Jeremy Bentham mused on the two forces that control our lives: 
@@ -835,7 +835,7 @@
     <section id="newsletter" class="newsletter">
         <h2>Join the Movement</h2>
         <p>
-            Join 800,000+ others who receive high-signal, curiosity-inducing content every single week.
+            Join and receive high-signal, curiosity-inducing content every single week.
         </p>
         <form class="newsletter-form" onsubmit="handleSubscribe(event)">
             <input type="email" placeholder="Enter your email" required>
@@ -846,17 +846,17 @@
     <!-- Footer -->
     <footer id="contact">
         <div class="social-links">
-            <a href="#" aria-label="Twitter/X">
+            <a href="#" aria-label="https://x.com/theiYags">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                 </svg>
             </a>
-            <a href="#" aria-label="LinkedIn">
+            <a href="#" aria-label="https://www.linkedin.com/in/yagnik-n-patel">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                 </svg>
             </a>
-            <a href="#" aria-label="Instagram">
+            <a href="#" aria-label="https://www.instagram.com/yagsvision/">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                 </svg>
@@ -867,7 +867,7 @@
                 </svg>
             </a>
         </div>
-        <p>© 2026 Your Name. All rights reserved.</p>
+        <p>© 2026 Yagnik N. All rights reserved. Made with 😍❤️</p>
     </footer>
 
     <script>
