--- a/index.htm
+++ b/index.htm
@@ -83,6 +83,12 @@
             align-items: center;
         }
 
+        .nav-right {
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+        }
+
         .logo {
             font-family: var(--font-sans);
             font-size: 1.5rem;
@@ -521,6 +527,10 @@
                 padding: 1rem 1.5rem;
             }
 
+            .nav-right {
+                gap: 1rem;
+            }
+
             .mobile-menu-toggle {
                 display: flex;
             }
@@ -601,7 +611,13 @@
     <nav>
         <div class="nav-content">
             <a href="#home" class="logo">Yagnik!</a>
-            <div style="display: flex; align-items: center; gap: 1rem;">
+            <div class="nav-right">
+                <ul class="nav-links">
+                    <li><a href="#about" onclick="closeMobileMenu()">About</a></li>
+                    <li><a href="#writing" onclick="closeMobileMenu()">Writing</a></li>
+                    <li><a href="#newsletter" onclick="closeMobileMenu()">Newsletter</a></li>
+                    <li><a href="#contact" onclick="closeMobileMenu()">Contact</a></li>
+                </ul>
                 <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle dark mode">
                     <svg class="sun-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="5"></circle>
@@ -624,12 +640,6 @@
                     <span></span>
                 </div>
             </div>
-            <ul class="nav-links">
-                <li><a href="#about" onclick="closeMobileMenu()">About</a></li>
-                <li><a href="#writing" onclick="closeMobileMenu()">Writing</a></li>
-                <li><a href="#newsletter" onclick="closeMobileMenu()">Newsletter</a></li>
-                <li><a href="#contact" onclick="closeMobileMenu()">Contact</a></li>
-            </ul>
         </div>
     </nav>
 
