--- a/index.htm
+++ b/index.htm
@@ -478,6 +478,21 @@
             box-shadow: 0 8px 24px rgba(37, 99, 235, 0.3);
         }
 
+        .content-disclaimer {
+    margin-top: 3rem;
+    padding: 1.5rem 2rem;
+    border-left: 3px solid var(--color-border);
+    background: rgba(0, 0, 0, 0.02);
+    font-size: 0.95rem;
+    color: var(--color-text-light);
+}
+
+.content-disclaimer strong {
+    font-family: var(--font-sans);
+    color: var(--color-text);
+}
+
+
         /* Footer */
         footer {
             max-width: 800px;
@@ -931,6 +946,18 @@
             </p>
         </section>
     </div>
+
+              <div class="content-disclaimer">
+    <p>
+        <strong>Note:</strong> Some ideas, frameworks, and quotations shared on this website are inspired by and derived from various books, research papers, articles, and online platforms including X (formerly Twitter). 
+        Wherever possible, I aim to provide proper attribution to the original creators.
+    </p>
+    <p>
+        If you believe any content has been shared without appropriate credit, please feel free to reach out. 
+        I will gladly review and resolve the matter promptly.
+    </p>
+              </div>
+
 
     <!-- Newsletter Section -->
     <section id="newsletter" class="newsletter">
