Implement dark mode styles and update footer
Added dark mode styles for body and quotes, updated button styles, and modified the content disclaimer background.

--- a/index.htm
+++ b/index.htm
@@ -28,6 +28,14 @@
             --color-card-bg: #1a1a1a;
         }
 
+        body.dark-mode {
+    --color-bg: #0e0e11;
+    --color-text: #f5f5f5;
+    --color-text-light: #a1a1aa;
+    --color-border: #2a2a2e;
+}
+
+
         * {
             margin: 0;
             padding: 0;
@@ -182,6 +190,27 @@
             fill: var(--color-text);
             stroke: var(--color-text);
         }
+
+        /* Quotes Dark Mode */
+
+        body.dark-mode .quotes-container,
+body.dark-mode .quote-of-day {
+    background: #16161a;
+    border-color: #2a2a2e;
+}
+
+body.dark-mode .copy-btn,
+body.dark-mode .share-btn {
+    border-color: #2a2a2e;
+    color: #f5f5f5;
+}
+
+body.dark-mode .copy-btn:hover,
+body.dark-mode .share-btn:hover {
+    background: var(--color-accent);
+    color: white;
+}
+
 
         /* Hero Section */
         .hero {
@@ -398,8 +427,8 @@
         /* Scroll Reveal Animation */
 .reveal-quote {
     opacity: 0;
-    transform: translateY(25px);
-    transition: opacity 0.8s ease, transform 0.8s ease;
+    transform: translateY(30px);
+    transition: transform 0.8s ease, opacity 0.8s ease;
 }
 
 .reveal-quote.active {
@@ -482,6 +511,12 @@
 .quotes-list li {
     margin-bottom: 15px;
 }
+
+        body.dark-mode .content-disclaimer {
+    background: rgba(255,255,255,0.03);
+    border-left: 3px solid #2a2a2e;
+}
+
 
         /* Newsletter Section */
         .newsletter {
@@ -1149,7 +1184,7 @@
                 </svg>
             </a>
         </div>
-        <p>© 2026 Yagnik N. All rights reserved. Made with 😍❤️</p>
+        <p>© 2026 Yagnik N. All rights reserved.</p>
     </footer>
 
     <script>
