Add dark theme styles for quotes section

--- a/index.htm
+++ b/index.htm
@@ -35,6 +35,12 @@
     --color-border: #2a2a2e;
 }
 
+        [data-theme="dark"] #quotes h2 {
+    color: #e4e4e7;
+    letter-spacing: -0.02em;
+}
+
+
 
         * {
             margin: 0;
