Update dark theme styles in index.htm

--- a/index.htm
+++ b/index.htm
@@ -35,9 +35,11 @@
     --color-border: #2a2a2e;
 }
 
-        [data-theme="dark"] #quotes h2 {
-    color: #e4e4e7;
-    letter-spacing: -0.02em;
+        [data-theme="dark"] {
+    --color-text: #f4f4f5;
+    --color-text-light: #a1a1aa;
+}
+
 }
 
 
