--- a/index.htm
+++ b/index.htm
@@ -728,30 +728,10 @@ body.dark-mode .share-btn:hover {
         }
 
         /* Responsive */
-       @media (max-width: 768px) {
-
+      @media (max-width: 768px) {
     .newsletter-form {
         flex-direction: column;
         align-items: stretch;
-        width: 100%;
-    }
-
-    .newsletter-form input,
-    .newsletter-form button {
-        width: 100% !important;
-        max-width: 100% !important;
-        margin: 0;
-        box-sizing: border-box;
-    }
-
-    .newsletter-form input {
-        padding: 1.2rem 1.5rem;
-        border-radius: 50px;
-    }
-
-    .newsletter-form button {
-        padding: 1.2rem;
-        border-radius: 50px;
     }
 }
 
@@ -825,13 +805,48 @@ body.dark-mode .share-btn:hover {
                 padding: 0 1.5rem 4rem;
             }
 
-           .newsletter-form {
+           /* Newsletter Form - Clean Universal Layout */
+
+.newsletter-form {
     display: flex;
     gap: 1rem;
-    max-width: 500px;
-    margin: 0 auto;
     width: 100%;
+    max-width: 600px;
+    margin: 2rem auto 0;
 }
+
+.newsletter-form input,
+.newsletter-form button {
+    flex: 1;
+    padding: 1.2rem;
+    border-radius: 50px;
+    font-family: var(--font-sans);
+    font-size: 1rem;
+    box-sizing: border-box;
+}
+
+/* Input Style */
+.newsletter-form input {
+    border: 1px solid var(--color-border);
+    background: var(--color-card-bg);
+    color: var(--color-text);
+    outline: none;
+}
+
+/* Button Style */
+.newsletter-form button {
+    border: none;
+    background: var(--color-accent);
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.newsletter-form button:hover {
+    opacity: 0.9;
+    transform: translateY(-2px);
+}
+
 
 
             .newsletter-form input {
