--- a/index.htm
+++ b/index.htm
@@ -727,11 +727,34 @@ body.dark-mode .share-btn:hover {
             color: var(--color-text-light);
         }
 
+        /* Desktop Navbar */
+
+@media (min-width: 769px) {
+    .nav-links {
+        display: flex !important;
+        position: static;
+        flex-direction: row;
+        gap: 2.5rem;
+        max-height: none;
+        background: transparent;
+        border: none;
+    }
+
+    .mobile-menu-toggle {
+        display: none !important;
+    }
+}
+
+
         /* Responsive */
       @media (max-width: 768px) {
     .newsletter-form {
         flex-direction: column;
-        align-items: stretch;
+    }
+
+    .newsletter-form input,
+    .newsletter-form button {
+        width: 100%;
     }
 }
 
@@ -804,48 +827,53 @@ body.dark-mode .share-btn:hover {
             .container {
                 padding: 0 1.5rem 4rem;
             }
-
-           /* Newsletter Form - Clean Universal Layout */
+/* =========================
+   Newsletter Layout
+========================= */
 
 .newsletter-form {
     display: flex;
     gap: 1rem;
     width: 100%;
-    max-width: 600px;
+    max-width: 650px;
     margin: 2rem auto 0;
+    justify-content: center;
 }
 
-.newsletter-form input,
-.newsletter-form button {
-    flex: 1;
-    padding: 1.2rem;
+.newsletter-form input {
+    flex: 2;
+    padding: 1rem 1.5rem;
     border-radius: 50px;
+    border: 1px solid var(--color-border);
+    background: #2a2a2a; /* dark clean input */
+    color: #ffffff;
     font-family: var(--font-sans);
     font-size: 1rem;
-    box-sizing: border-box;
-}
-
-/* Input Style */
-.newsletter-form input {
-    border: 1px solid var(--color-border);
-    background: var(--color-card-bg);
-    color: var(--color-text);
     outline: none;
 }
 
-/* Button Style */
+.newsletter-form input::placeholder {
+    color: #aaaaaa;
+}
+
 .newsletter-form button {
+    flex: 1;
+    padding: 1rem 2rem;
+    border-radius: 50px;
     border: none;
-    background: var(--color-accent);
+    background: linear-gradient(135deg, #3b82f6, #2563eb);
     color: white;
+    font-family: var(--font-sans);
+    font-size: 1rem;
     cursor: pointer;
     transition: all 0.3s ease;
 }
 
 .newsletter-form button:hover {
-    opacity: 0.9;
     transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(37,99,235,0.4);
 }
+
 
 
 
