--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,5 @@
+NEW
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -158,43 +160,33 @@
             list-style: none;
         }
 
-        .nav-links {
-    display: flex;
-    gap: 2.2rem;
-    align-items: center;
-}
-
-
- .nav-links a {
-    font-family: var(--font-sans);
-    font-size: 0.85rem;   /* smaller like old */
-    font-weight: 500;
-    letter-spacing: 0.02em;
-    color: var(--color-text-light);
-    text-decoration: none;
-    position: relative;
-}
-
+        .nav-links a {
+            font-family: var(--font-sans);
+            font-size: 0.95rem;
+            color: var(--color-text-light);
+            text-decoration: none;
+            transition: color 0.3s ease;
+            position: relative;
+        }
 
         .nav-links a::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    width: 0%;
-    height: 1px;   /* thinner */
-    background-color: var(--color-accent);
-    transition: width 0.25s ease;
-}
+            content: '';
+            position: absolute;
+            bottom: -4px;
+            left: 0;
+            width: 0;
+            height: 1px;
+            background: var(--color-accent);
+            transition: width 0.3s ease;
+        }
 
-.nav-links a:hover {
-    color: var(--color-text);
-}
+        .nav-links a:hover {
+            color: var(--color-text);
+        }
 
-.nav-links a:hover::after {
-    width: 100%;
-}
-
+        .nav-links a:hover::after {
+            width: 100%;
+        }
 
         /* Mobile menu toggle */
         .mobile-menu-toggle {
@@ -737,9 +729,75 @@ body.dark-mode .share-btn:hover {
             color: var(--color-text-light);
         }
 
+        /* Responsive */
        @media (max-width: 768px) {
+
+    .newsletter-form {
+        flex-direction: column;
+        gap: 1.2rem;
+        width: 100%;
+    }
+
+    .newsletter-form input,
+    .newsletter-form button {
+        width: 100%;
+        border-radius: 50px;
+    }
+
+    .newsletter-form input {
+        padding: 1.2rem 1.5rem;
+    }
+
+    .newsletter-form button {
+        padding: 1.2rem;
+    }
+
+}
+
+
+            .nav-right {
+                gap: 1rem;
+            }
+
+            .mobile-menu-toggle {
+                display: flex;
+            }
+
             .nav-links {
-                gap: 1.5rem;
+                position: fixed;
+                top: 70px;
+                left: 0;
+                right: 0;
+                background: var(--color-bg);
+                flex-direction: column;
+                gap: 0;
+                padding: 0;
+                max-height: 0;
+                overflow: hidden;
+                transition: max-height 0.3s ease;
+                border-bottom: 1px solid var(--color-border);
+            }
+
+            .nav-links.active {
+                max-height: 300px;
+            }
+
+            .nav-links li {
+                border-bottom: 1px solid var(--color-border);
+            }
+
+            .nav-links li:last-child {
+                border-bottom: none;
+            }
+
+            .nav-links a {
+                display: block;
+                padding: 1.2rem 1.5rem;
+                font-size: 1rem;
+            }
+
+            .nav-links a::after {
+                display: none;
             }
 
             .hero {
@@ -766,25 +824,18 @@ body.dark-mode .share-btn:hover {
                 padding: 0 1.5rem 4rem;
             }
 
-            .newsletter-form {
-                flex-direction: column;
-            }
+           .newsletter-form {
+    display: flex;
+    gap: 1rem;
+    max-width: 500px;
+    margin: 0 auto;
+    width: 100%;
+}
+
 
             .newsletter-form input {
                 min-width: 100%;
             }
-        }
-
-        /* Scroll reveal */
-        .reveal {
-            opacity: 0;
-            transform: translateY(30px);
-            transition: all 0.8s ease-out;
-        }
-
-        .reveal.active {
-            opacity: 1;
-            transform: translateY(0);
         }
     </style>
 </head>
